# flutter_openim_sdk_ffi

./: CHANGELOG.md  README.md  ffigen.yaml  open_im.yaml  pubspec.yaml
android/: build.gradle
android/libs/arm64/: libopenim_sdk_ffi.h
android/libs/arm64-v8a/: libopenim_sdk_ffi.h
android/libs/armeabi/: libopenim_sdk_ffi.h
android/libs/x86/: libopenim_sdk_ffi.h
android/src/main/: AndroidManifest.xml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_openim_sdk_ffi.podspec  libopenim_sdk_ffi_ios.h
ios/Classes/: FlutterOpenimSdkFfi.swift  JsonUtil.swift
ios/Classes/listener/: OnAdvanceMsgListener.swift  OnBase.swift  OnConnListener.swift  OnConversationListener.swift  OnCustomBusinessListener.swift  OnFileUploadProgressListener.swift  OnFriendshipListener.swift  OnGroupListener.swift  OnListenerForService.swift  OnMessageKvInfoListener.swift  OnMsgSendCallback.swift  OnOrganizationListener.swift  OnSignalingListener.swift  OnUserListener.swift  OnWorkMomentsListener.swift
ios/Classes/models/: AdvancedMessage.swift  AtElem.swift  AtUserInfo.swift  AttachedInfoElem.swift  BaseEntity.swift  BlacklistInfo.swift  ConversationInfo.swift  CustomElem.swift  CustomSignalingInfo.swift  DeptInfo.swift  DeptMemberAndSubDept.swift  DeptMemberInfo.swift  FaceElem.swift  FileElem.swift  FriendApplicationInfo.swift  FriendInfo.swift  FriendshipInfo.swift  GroupApplicationInfo.swift  GroupHasReadInfo.swift  GroupInfo.swift  GroupInviteResult.swift  GroupMemberRole.swift  GroupMembersInfo.swift  KeyValue.swift  LocationElem.swift  MeetingInfo.swift  MeetingInfoList.swift  MeetingStreamEvent.swift  MergeElem.swift  Message.swift  MessageKv.swift  MessageTypeKeyMapping.swift  NotDisturbInfo.swift  NotificationElem.swift  OfflinePushInfo.swift  OrganizationSearchResult.swift  Participant.swift  PictureElem.swift  PictureInfo.swift  PublicUserInfo.swift  (+19 more)
ios/openim_sdk_ffi.framework/: Info.plist
ios/openim_sdk_ffi.framework/_CodeSignature/: CodeResources
lib/: flutter_openim_sdk_ffi.dart  flutter_openim_sdk_ffi_bindings_generated.dart  openim_sdk_ffi_bindings_generated.dart
lib/src/: openim.dart  openim_error.dart  openim_listener.dart  openim_manager.dart  utils.dart
lib/src/callback/: callback.dart  native_call.dart  native_method.dart
lib/src/enum/: group_type.dart  im_platform.dart  listener_type.dart  message_type.dart
lib/src/manager/: im_conversation_manager.dart  im_friendship_manager.dart  im_group_manager.dart  im_manager.dart  im_message_manager.dart  im_organization_manager.dart  (+3 more)
macos/: openim_sdk_ffi_apple.h
src/: CMakeLists.txt  flutter_openim_sdk_ffi.c  flutter_openim_sdk_ffi.h  flutter_openim_sdk_ffi_android.c  flutter_openim_sdk_ffi_ios.c  libopenim_sdk_ffi.h  openim_sdk_ffi.h  openim_sdk_ffi_android.h  openim_sdk_ffi_apple.h  openim_sdk_ffi_ios.h  openim_sdk_ffi_macos.h  openim_sdk_ffi_windows.h
windows/: CMakeLists.txt  libopenim_sdk_ffi.lib
(+92 files in other folders)
